<resources>
    <string name="app_name">ClockApp</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_timer">Timer</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_delete_all">Delete all</string>
    <string name="title_exit_delete_mode">Exit delete mode</string>
    <string name="title_set_alarm">Set an alarm</string>
    <string name="time_default_label">00:00:00.00</string>
    <string name="lap_id_header">Lap no.</string>
    <string name="lap_time_header">Lap time</string>
    <string name="total_time_header">Total time</string>
    <string name="start_timer_button_label">Start timer</string>
    <string name="hour_picker_label">Hours</string>
    <string name="minute_picker_label">Minutes</string>
    <string name="second_picker_label">Seconds</string>
    <string name="timer_default_time">00:00:00</string>
    <string name="learning_mode_label">Learning mode</string>
    <string name="repeat_label">Repeat</string>
    <string name="daily_repeat_label">DAILY</string>
    <string name="weekly_repeat_label">WEEKLY</string>
    <string name="monthly_repeat_label">MONTHLY</string>
    <string name="alarm_name_label">Label</string>
    <string name="alarm_default_label">Alarm</string>
    <string name="alarm_ringtone_label">Alarm Ringtone</string>
    <string name="alarm_default_ringtone">None</string>
    <string name="set_alarm_btn_label">Set alarm</string>
    <string name="alarm_volume_label">Volume</string>
    <string name="filter_term_time_hint">00:00</string>
    <string name="filter_term_title_hint">Alarm</string>
    <string name="time_zone_label">Time Zone</string>
    <string name="time_zone_default_value">Europe/Warsaw</string>
    <string name="theme_label">Theme</string>
    <string name="theme_default_value">Dark</string>
    <string name="default_ringtone_label">Default Ringtone</string>
    <string name="default_ringtone_value">None</string>
    <string name="default_volume_label">Default Volume</string>
    <string name="save_settings_btn_label">Save</string>
    <string name="ringtone_part_label">Ringtone part</string>
    <string name="time_sort_label">time</string>
    <string name="title_sort_label">title</string>
    <string name="enabled_sort_label">enabled</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="clear_all_btn_title">CLEAR ALL</string>
</resources>