<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/title_search"
        android:id="@+id/action_search"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"/>

    <item
        android:title="@string/title_leaderboard"
        android:id="@+id/action_leaderboard"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_leaderboard"
        />

    <item
        android:title="@string/title_settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings" />

    <item
        android:title="@string/title_exit_delete_mode"
        android:id="@+id/action_exit_delete_mode"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_close"
        />

    <item
        android:title="@string/title_delete_all"
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_checkbox_disabled"
        />

</menu>