<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.alarm.AlarmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="@dimen/filter_row_horizontal_padding">

            <Spinner
                android:id="@+id/filter_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingHorizontal="@dimen/filter_row_horizontal_padding">

            <EditText
                android:id="@+id/filter_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_term_time_hint"
                android:inputType="time"
                android:visibility="gone"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/sort_time_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/sort_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_sort_label"
                android:textColor="?attr/colorOnPrimary" />

            <ImageView
                android:id="@+id/sort_time_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sort_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sort_title_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/sort_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sort_label"
                android:textColor="@color/dark_gray" />

            <ImageView
                android:id="@+id/sort_title_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sort_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sort_enabled_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/sort_enabled_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled_sort_label"
                android:textColor="@color/dark_gray"/>

            <ImageView
                android:id="@+id/sort_enabled_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sort_down" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/alarms_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/title_set_alarm"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="15dp" />

</LinearLayout>