<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.stopwatch.StopwatchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="start|center_vertical">
            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_default_label"
                android:textSize="@dimen/text_big"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="start|center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stopwatch_big" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/lap_row_vertical_padding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="start|center_vertical">

            <TextView
                android:id="@+id/lap_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lap_time_header"
                android:textSize="@dimen/lap_row_text_size"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="start|center_vertical">

            <TextView
                android:id="@+id/total_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_time_header"
                android:textSize="@dimen/lap_row_text_size"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/total_time_left_margin"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ListView
            android:id="@+id/laps_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/stopwatch_controls_margin_top"
        android:paddingBottom="@dimen/stopwatch_controls_margin_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical">
            <ImageView
                android:id="@+id/restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_restart"
                android:visibility="gone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="@dimen/big_button_size"
                android:layout_height="@dimen/big_button_size"
                android:src="@drawable/ic_play"
                android:background="@drawable/big_rounded_btn"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical">
            <ImageView
                android:id="@+id/lap_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flag"
                android:visibility="gone"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>